Add gradle and ant (not working)