@@ -17,25 +17,19 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.6.3</version>
                 <configuration>
-                    <source>17</source>
+                    <source>11</source>
                     <additionalJOptions>
+                        <!--
                         <additionalJOption>-J-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005</additionalJOption>
-                        <!-- Not necessary if the below are there
-                        <additionalJOption>- -add-exports=jdk.javadoc/jdk.javadoc.internal.tool=asciidoclet</additionalJOption>
-                        <additionalJOption>- -add-exports=jdk.compiler/com.sun.tools.javac.parser=asciidoclet</additionalJOption>
-                        <additionalJOption>- -add-exports=jdk.compiler/com.sun.tools.javac.tree=asciidoclet</additionalJOption>
-                        <additionalJOption>- -add-exports=jdk.compiler/com.sun.tools.javac.model=asciidoclet</additionalJOption>
                         -->
                         <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
-                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
-                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
-                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</additionalJOption>
+<!--                        <additionalJOption>-J&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>-->
+<!--                        <additionalJOption>-J&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>-->
+<!--                        <additionalJOption>-J&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</additionalJOption>-->
                         <!-- Java 17/21 -->
-                        <additionalJOption>--add-opens=jdk.compiler/com.sun.tools.javac.api=asciidoclet</additionalJOption>
-                        <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</additionalJOption>
-                        <additionalJOption>--add-opens=jdk.compiler/com.sun.tools.javac.parser=asciidoclet</additionalJOption>
-                        <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
-                        <additionalJOption>-Xdoclint:all,-html,-accessibility</additionalJOption>
+<!--                        <additionalJOption>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</additionalJOption>-->
+<!--                        <additionalJOption>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>-->
+<!--                        <additionalJOption>-Xdoclint:all,-html,-accessibility</additionalJOption>-->
                     </additionalJOptions>
                     <doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
                     <docletArtifacts>
@@ -43,7 +37,7 @@
                             <groupId>org.asciidoctor</groupId>
                             <artifactId>asciidoclet</artifactId>
                             <version>2.0.0-SNAPSHOT</version>
-                            <classifier>shaded</classifier>
+<!--                            <classifier>shaded</classifier>-->
                         </docletArtifact>
                     </docletArtifacts>
                     <overview>src/main/java/overview.adoc</overview>
